--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-<h1>Eric Pihlstrom's CSPB 3112 Website</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <h1>Eric Pihlstrom's Website</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae voluptatum deleniti, molestiae eveniet laboriosam ipsa alias blanditiis ipsam a praesentium labore placeat tempora mollitia sit officia dolorum saepe dicta facere!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum praesentium similique ut velit voluptas veniam a, fugiat inventore voluptatem accusamus nam dolorem voluptatibus distinctio est culpa atque accusantium officiis facilis?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto ipsam, dolores sint magni earum quae, cum omnis nisi vero laudantium nesciunt vitae ullam pariatur voluptates quia. Nobis quod delectus saepe!</p>
 </body>
 </html>
