--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Eric Pihlstrom | Welcome to my website!
 ---
-
+<title>Eric Pihlstrom | Welcome to my website!</title>
 <p>Lorem Ipsum</p>
