--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Eric Pihlstrom
+description: Welcome to my website!
 ---
-<title>Eric Pihlstrom | Welcome to my website!</title>
-<p>Lorem Ipsum</p>
+
