--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@ title: Eric Pihlstrom
 description: Welcome to my website!
 ---
 
-<button type="button">Weekly Project Updates</button>
+<a href="weeklyUpdates.md">
+    <button>Weekly Project Updates!</button>
+</a>
