--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Eric Pihlstrom
 description: Welcome to my website!
 ---
 
-<a href="weeklyUpdates.md">
+<a href="weeklyUpdates.md" target="_blank">
     <button>Weekly Project Updates!</button>
 </a>
