--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ description: Welcome to my website!
 ---
 
 <a href="weeklyUpdates" target="_blank">
-    <button>Weekly Project Updates!</button>
+    <centered><button>Weekly Project Updates!</button></centered>
 </a>
