--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@ description: Welcome to my website!
 ---
 
 <a href="weeklyUpdates" target="_blank">
-    <centered><button>Weekly Project Updates!</button></centered>
+    <center>
+        <button>Weekly Project Updates!</button>
+    </center>
 </a>
