--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ description: Welcome to my website!
 <div class="container">
     <h1>Welcome to My Personal Website</h1>
     <p>Hi, I'm Eric Pihlstrom. Here you can find information about my projects and weekly updates.</p>
-    <a href="{{ '/weeklyUpdates' | relative_url }}" class="btn"><i class="fas fa-calendar-alt"></i> Weekly Project Updates</a>
+    <a href="{{ '/weeklyUpdates' | relative_url }}" class="btn btn-primary"><i class="fas fa-calendar-alt"></i> Weekly Project Updates</a>
 </div>
